--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
-@import "//sass/pages/index.scss";
-@import "//sass/pages/menu.scss";
-@import "//sass/components/button.scss";
-@import "//sass/components/animation.scss";
-@import "//sass/main.scss";
+@import "./Pages/index.scss";
+@import "./components/animation.scss";
+@import "./components/button.scss";
+@import "./Pages/menu.scss"
