--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
-@import "./Pages/index.scss";
 @import "./components/animation.scss";
 @import "./components/button.scss";
-@import "./Pages/menu.scss"
+@import "./components/keyframe.scss";
+@import "./Pages/index.scss";
+@import "./Pages/menu.scss";
