--- a/sass/Pages/index.scss
+++ b/sass/Pages/index.scss
@@ -20,65 +20,113 @@ body {
     justify-content: center;
     margin: 0;
     padding: 0;
+    width:100%;
 }
+
 .main-container {
-    width: 100%;
-    max-width: 1440px;
     box-sizing: border-box;
+    width: 100%;
 }
+
 p {
     font-style: normal;
     font-size: 18px;
     line-height: 21px;
     /* identical to box height */
 }
+
 h1 {
     font-style: normal;
     font-size: 24px;
     line-height: 28px;
     color: var(--main-b-color);
-    @media (min-width: 1024px) {
-        h1 {
-            font-size: 40px;
-            font-weight: 700px;
-        }
-}}
+}
+
 h2 {
     font-style: normal;
     font-size: 24px;
     line-height: 28px;
 }
+
 h3 {
     font-style: normal;
     font-size: 16px;
     line-height: 19px;
-&.card__title {
-    font-size: 18px;
-    line-height: 21px;
+
 }
-}
+
 a {
     text-decoration: none;
     color: var(--main-b-color);
 }
+
+.text-align a {
+    color: var(--filtrer-b-color);
+    width: 186px;
+}
+
+h3 .card-title {
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.text-align .button-pink {
+    display: grid;
+}
+
 .text-align {
     display: flex;
     padding: 40px;
     justify-content: center;
-& .a {
-    color: var(--filtrer-b-color);
-    width: 186px;
 }
-& .button-pink {
-    display: grid;
-}}
+
 .prix {
     font-weight: 700;
+}
+
+.new {
+    background: var(--main-d-color);
+    width: 80px;
+    height: 29px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    color: var(--filtrer-d-color);
+    font-size: 14px;
+    font-weight: 500;
+    right: 5%;
+    top: 5%;
+    position: absolute;
+}
+
+.image-de-fond {
+    min-height: 275px;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+}
+
+.image-de-fond-gout {
+    background-image: url(/public/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+}
+
+.image-de-fond-sens {
+    background-image: url(/public/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
+}
+
+.image-de-fond-enchante {
+    background-image: url(/public/images/stil-u2Lp8tXIcjw-unsplash.jpg);
+}
+
+.image-de-fond-francais {
+    background-image: url(/public/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
 }
 
 main {
     display: block;
 }
+
 section {
     display: block;
 }
@@ -86,24 +134,29 @@ section {
 footer {
     background: var(--filtrer-bbg-color);
     padding: 22px 25px;
-&.h3 {
+}
+
+footer h3 {
     color: var(--filtrer-b-color);
     font-size: 16px;
     line-height: 19px;
     margin: 7px 0px 0px 0px;
 }
-&.p {
+
+footer p {
     color: var(--filtrer-b-color);
     font-size: 16px;
     line-height: 19px;
     margin: 7px 0px 0px 0px;
 }
-&.img-ohmyfood {
+
+footer .img-ohmyfood {
     width: 137.58px;
     height: 27px;
     color: var(--filtrer-b-color);
     padding: 10px 0px;
-}}
+}
+
 .img-ohmyfood {
     height: 36px;
     width: 197px;
@@ -111,142 +164,166 @@ footer {
     margin: 14px auto 5px auto;
     padding: 0;
 }
+
 .localisation-header {
     display: flex;
     justify-content: center;
     background: var(--main-bgg-color);
     gap: 17px;
+}
 
-&.p {
+.localisation-header p {
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
-}}
+}
+
 .fa-solid {
     font-weight: 900;
     align-items: center;
 
 }
+
 .fond-color {
     background: var(--main-bg-color);
     text-align: center;
     padding: 39px 26px 57px 34px;
 }
-.fa-solid::after {
-    color: white;
-    background-color: white;
+
+.fond-color2 {
+    background: var(--main-bg-color);
+    padding: 54px 15px 66px 15px;
 }
+
+.grid-fonctionnement {
+    display: grid;
+    gap: 25px;
+    padding: 48px 20px 68px 20px;
+}
+
 .fa-store::before {
     color: var(--main-color);
 }
-
-.card__logo
-.fa-solid
-{
-    z-index:2;
-    color: var(--main-color);
-    opacity: 0;
-&.fa-regular {
-    position: relative;
-    color: black;
-    z-index:1 ;
+.button-fonctionnement .fa-solid{
+    color: darkgray;
 }
-&.fa-solid:hover{
-   transition: ease-in-out;
-     opacity: 1;
+.flex .fa-solid {
+    margin-left: 20px;
+}
+
+.Fonction-2::after {
+    content: "2";
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--main-bg-color);
+    background-color: #9356DC;
+    font-size: 14px;
+    position: absolute;
+    top: 16px;
+    left: -12px;
+}
+
+.Fonction-2 {
+    position: relative;
+}
+
+.Fonction-1::after {
+    content: "1";
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--main-bg-color);
+    background-color: #9356DC;
+    font-size: 14px;
+    position: absolute;
+    top: 16px;
+    left: -12px;
+}
+
+.Fonction-1 {
+    position: relative;
+}
+
+.Fonction-3::after {
+    content: "3";
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--main-bg-color);
+    background-color: #9356DC;
+    font-size: 14px;
+    position: absolute;
+    top: 16px;
+    left: -12px;
+}
+
+.Fonction-3 {
+    position: relative;
+}
+
+.grid-fonctionnement.fa-regular {
+    position: relative;
+    color: darkgray;
+    z-index:1 ;
 }
 .fa-heart::before{
     right: 2px;
     position: absolute;
+    font-size: 21px;
 }
+
+.card-logo
+.fa-solid
+{
+    z-index:2;
+    color: transparent;
 }
-.end__footer 
-&.h2 {
+
+.end-footer h2 {
     font-family: 'Shrikhand';
     font-style: italic;
     line-height: 26px;
     color: var(--main-bg-color);
-&.h3 {
+}
+
+.end-footer h3 {
     font-family: 'Shrikhand';
     font-style: italic;
     font-weight: 400;
     font-size: 18px;
     line-height: 26px;
 }
-&.p {
+
+.end-footer p {
     font-size: 16px;
     line-height: 19px;
-}}
+}
 
 .fa-utensils:before {
     padding-right: 11px;
 }
+
 .fa-handshake-angle:before {
     padding-right: 11px;
 }
-.fonctionnement__container {
+
+.flex {
     display: grid;
     gap: 25px;
-    @media (min-width: 1024px){
-        .fonctionnement__container {
-            display: flex;
-            gap: 30px;
-        }}
 }
-.end__block {
+
+.block {
     display: block;
 }
 
-@media (min-width: 1024px) {
-    .img-ohmyfood {
-        margin: 30px auto;
-    }
-}
-
-    @media (min-width: 1024px){
-    .fonctionnement {
-        display: grid;
-        padding: 50px 190px;
-    }}
-   
-    @media (min-width: 1024px){
-    .fa-solid {
-        margin-left: 20px;
-    }}
-    @media (min-width: 1024px){
-    .end__block {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: baseline;
-    }}
-    @media (min-width: 1024px){
-    .end__block-2 {
-        display: flex;
-        align-items: baseline;
-    }}
-    @media (min-width: 1024px){
-    footer {
-        padding: 57px 30px 30px 0px;
-    }}
-    @media (min-width: 1024px){
-    .end__footer h2 {
-        padding-left: 16px;
-        margin: 16px;
-    }}
-    
-    @media (min-width: 1024px){
-    .end__footer p {
-        font-weight: 400;
-        font-size: 16px;
-        margin: 10px;
-    }}
-    @media (min-width: 1024px){
-    footer h3 {
-        margin: 10px;
-    }}
-    
-    @media (min-width: 1024px){
-    .Restaurants {
-        padding: 80px 180px 30px 180px;
-    }
-}
+ 
