--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,7 @@
   animation: loader 0s 2s forwards;
   transform-origin: top;
 }
-
-.dot {
+.loader-container .dot {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -32,7 +31,6 @@
   margin-right: -4rem;
   animation: reverse__check-mark-button__appear 0.8s;
 }
-
 .menu-prix i {
   display: flex;
   align-items: center;
@@ -43,20 +41,33 @@
   width: 20px;
   border-radius: 50%;
   color: #99E2D0;
-  animation: reverse__check-mark-button__rotate 0.8s;
+  opacity: 0;
+  animation: reverse__check-mark-button__appear 0.8s;
 }
 
 .card:hover .menu-prix {
   animation: check-mark-button__appear 0.8s forwards ease-in-out;
 }
-
 .card:hover .menu-prix i {
   animation: check-mark-button__appear 0.8s forwards ease-in-out;
 }
 
-.fa-solid.fa-heart:hover {
-  background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
-  transition: color 1s ease-in-out;
+.card-logo .fa-solid:hover {
+  background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
+  transition: opacity 0.4s ease-in-out 0.4s;
+}
+.card-logo .fa-solid {
+  color: transparent;
+  transition: color;
+  opacity: 0;
+  z-index: 3;
+}
+.card-logo .fa-regular {
+  position: absolute;
+  z-index: 2;
 }
 
 .button-pink {
@@ -70,14 +81,12 @@
   display: inline-flex;
   text-align: center;
 }
-
 .button-pink p {
   color: var(--filtrer-b-color);
   padding: 13px 18px;
   font-size: 16px;
   line-height: 19px;
 }
-
 .button-pink:hover {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.35);
   cursor: pointer;
@@ -95,6 +104,155 @@
   border: var(--filtrer-b-color);
   gap: 27px;
   width: 100%;
+}
+@media (min-width: 1024px) {
+  .button-fonctionnement {
+    justify-content: initial;
+  }
+}
+@media (min-width: 1024px) {
+  .button-fonctionnement h3 {
+    padding: 10px 0px;
+  }
+}
+.button-fonctionnement .fa-solid {
+  color: darkgray;
+}
+
+.fonction {
+  display: grid;
+  gap: 25px;
+}
+@media (min-width: 1024px) {
+  .fonction {
+    display: flex;
+    gap: 30px;
+  }
+}
+.fonction .fa-solid {
+  margin-left: 20px;
+}
+@media (min-width: 1024px) {
+  .fonction .fa-solid {
+    margin-left: 20px;
+  }
+}
+.fonction-1 {
+  position: relative;
+}
+.fonction-1:after {
+  content: "1";
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--main-bg-color);
+  background-color: #9356DC;
+  font-size: 14px;
+  position: absolute;
+  top: 16px;
+  left: -12px;
+}
+@media (min-width: 1024px) {
+  .fonction-1 {
+    width: 33%;
+  }
+}
+@media (min-width: 1024px) {
+  .fonction-1:after {
+    top: 26px;
+  }
+}
+.fonction-2 {
+  position: relative;
+}
+.fonction-2:after {
+  content: "2";
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--main-bg-color);
+  background-color: #9356DC;
+  font-size: 14px;
+  position: absolute;
+  top: 16px;
+  left: -12px;
+}
+@media (min-width: 1024px) {
+  .fonction-2 {
+    width: 33%;
+  }
+}
+@media (min-width: 1024px) {
+  .fonction-2:after {
+    top: 26px;
+  }
+}
+.fonction-3 {
+  position: relative;
+}
+.fonction-3:after {
+  content: "3";
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--main-bg-color);
+  background-color: #9356DC;
+  font-size: 14px;
+  position: absolute;
+  top: 16px;
+  left: -12px;
+}
+@media (min-width: 1024px) {
+  .fonction-3 {
+    width: 33%;
+  }
+}
+@media (min-width: 1024px) {
+  .fonction-3:after {
+    top: 26px;
+  }
+}
+
+.fa-heart {
+  font-size: 25px;
+}
+
+.fa-utensils:before {
+  padding-right: 11px;
+}
+
+.fa-handshake-angle:before {
+  padding-right: 11px;
+}
+
+.fa-store::before {
+  color: var(--main-color);
+}
+
+.fa-solid {
+  font-weight: 900;
+  align-items: center;
+}
+
+.localisation-header {
+  display: flex;
+  justify-content: center;
+  background: var(--main-bgg-color);
+  gap: 17px;
+}
+.localisation-header p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
 }
 
 @keyframes loader {
@@ -123,6 +281,24 @@
   to {
     opacity: 0;
     margin-right: -4rem;
+  }
+}
+@keyframes animation-menu {
+  0% {
+    transform: translateX(150px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes coeur {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
 * {
@@ -168,13 +344,13 @@ h1 {
   line-height: 28px;
   color: var(--main-b-color);
 }
-
 @media (min-width: 1024px) {
   h1 {
     font-size: 40px;
     font-weight: 700px;
   }
 }
+
 h2 {
   font-style: normal;
   font-size: 24px;
@@ -192,40 +368,23 @@ a {
   color: var(--main-b-color);
 }
 
-.text-align a {
-  color: var(--filtrer-b-color);
-  width: 186px;
-}
-
-.navbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.navbar p {
-  font-size: 30px;
-  padding: 14px 0px 5px 0px;
-}
-
-.navbar a {
-  position: absolute;
-  left: 23px;
-}
-
 h3 .card-title {
   font-size: 18px;
   line-height: 21px;
-}
-
-.text-align .button-pink {
-  display: grid;
 }
 
 .text-align {
   display: flex;
   padding: 40px;
   justify-content: center;
+}
+.text-align a {
+  color: var(--filtrer-b-color);
+  width: 186px;
+}
+
+.text-align .button-pink {
+  display: grid;
 }
 
 .prix {
@@ -247,6 +406,9 @@ h3 .card-title {
   top: 5%;
   position: absolute;
 }
+.new p {
+  font-size: 14px;
+}
 
 .image-de-fond {
   min-height: 275px;
@@ -254,21 +416,17 @@ h3 .card-title {
   background-position: center;
   object-fit: cover;
 }
-
 .image-de-fond-gout {
-  background-image: url(/public/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+  background-image: url(../../public/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
 }
-
 .image-de-fond-sens {
-  background-image: url(/public/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
+  background-image: url(../../public/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
 }
-
 .image-de-fond-enchante {
-  background-image: url(/public/images/stil-u2Lp8tXIcjw-unsplash.jpg);
+  background-image: url(../../public/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
 }
-
 .image-de-fond-francais {
-  background-image: url(/public/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+  background-image: url(../../public/images/stil-u2Lp8tXIcjw-unsplash.jpg);
 }
 
 main {
@@ -283,19 +441,27 @@ footer {
   background: var(--filtrer-bbg-color);
   padding: 22px 25px;
 }
-
 footer h3 {
   color: var(--filtrer-b-color);
   font-size: 16px;
   line-height: 19px;
   margin: 7px 0px 0px 0px;
 }
-
+@media (min-width: 1024px) {
+  footer h3 {
+    margin: 10px;
+  }
+}
 footer p {
   color: var(--filtrer-b-color);
   font-size: 16px;
   line-height: 19px;
   margin: 7px 0px 0px 0px;
+}
+@media (min-width: 1024px) {
+  footer {
+    padding: 57px 30px 30px 0px;
+  }
 }
 
 footer .img-ohmyfood {
@@ -312,23 +478,10 @@ footer .img-ohmyfood {
   margin: 14px auto 5px auto;
   padding: 0;
 }
-
-.localisation-header {
-  display: flex;
-  justify-content: center;
-  background: var(--main-bgg-color);
-  gap: 17px;
-}
-
-.localisation-header p {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-}
-
-.fa-solid {
-  font-weight: 900;
-  align-items: center;
+@media (min-width: 1024px) {
+  .img-ohmyfood {
+    margin: 30px auto;
+  }
 }
 
 .fond-color {
@@ -337,113 +490,35 @@ footer .img-ohmyfood {
   padding: 39px 26px 57px 34px;
 }
 
-.fond-color2 {
-  background: var(--main-bg-color);
-  padding: 54px 15px 66px 15px;
-}
-
-.grid-fonctionnement {
+.fonctionnement {
   display: grid;
   gap: 25px;
   padding: 48px 20px 68px 20px;
 }
-
-.fa-store::before {
-  color: var(--main-color);
+@media (min-width: 1024px) {
+  .fonctionnement {
+    display: grid;
+    padding: 50px 190px;
+  }
 }
 
-.button-fonctionnement .fa-solid {
-  color: darkgray;
-}
-
-.flex .fa-solid {
-  margin-left: 20px;
-}
-
-.Fonction-2::after {
-  content: "2";
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--main-bg-color);
-  background-color: #9356DC;
-  font-size: 14px;
-  position: absolute;
-  top: 16px;
-  left: -12px;
-}
-
-.Fonction-2 {
-  position: relative;
-}
-
-.Fonction-1::after {
-  content: "1";
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--main-bg-color);
-  background-color: #9356DC;
-  font-size: 14px;
-  position: absolute;
-  top: 16px;
-  left: -12px;
-}
-
-.Fonction-1 {
-  position: relative;
-}
-
-.Fonction-3::after {
-  content: "3";
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--main-bg-color);
-  background-color: #9356DC;
-  font-size: 14px;
-  position: absolute;
-  top: 16px;
-  left: -12px;
-}
-
-.Fonction-3 {
-  position: relative;
-}
-
-.grid-fonctionnement.fa-regular {
+.fonctionnement.fa-regular {
   position: relative;
   color: darkgray;
   z-index: 1;
 }
 
-.fa-heart::before {
-  right: 2px;
-  position: absolute;
-  font-size: 21px;
+.end-footer p {
+  font-size: 16px;
+  line-height: 19px;
 }
-
-.card-logo .fa-solid {
-  z-index: 2;
-  color: transparent;
+@media (min-width: 1024px) {
+  .end-footer p {
+    font-weight: 400;
+    font-size: 16px;
+    margin: 10px;
+  }
 }
-
-.end-footer h2 {
-  font-family: "Shrikhand";
-  font-style: italic;
-  line-height: 26px;
-  color: var(--main-bg-color);
-}
-
 .end-footer h3 {
   font-family: "Shrikhand";
   font-style: italic;
@@ -451,29 +526,36 @@ footer .img-ohmyfood {
   font-size: 18px;
   line-height: 26px;
 }
-
-.end-footer p {
-  font-size: 16px;
-  line-height: 19px;
+.end-footer h2 {
+  font-family: "Shrikhand";
+  font-style: italic;
+  line-height: 26px;
+  color: var(--main-bg-color);
 }
-
-.fa-utensils:before {
-  padding-right: 11px;
-}
-
-.fa-handshake-angle:before {
-  padding-right: 11px;
-}
-
-.flex {
-  display: grid;
-  gap: 25px;
+@media (min-width: 1024px) {
+  .end-footer h2 {
+    padding-left: 16px;
+    margin: 16px;
+  }
 }
 
 .block {
   display: block;
 }
+@media (min-width: 1024px) {
+  .block {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: baseline;
+  }
+}
 
+@media (min-width: 1024px) {
+  .block-2 {
+    display: flex;
+    align-items: baseline;
+  }
+}
 .menu {
   width: 100%;
   background: var(--main-bg-color);
@@ -482,10 +564,58 @@ footer .img-ohmyfood {
   display: flex;
   flex-direction: column;
 }
-
 .menu p {
   text-overflow: ellipsis;
   overflow: hidden;
+}
+.menu-title {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  gap: 50px;
+}
+@media (min-width: 1024px) {
+  .menu-title {
+    justify-content: center;
+  }
+}
+.menu-title .card-logo {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+}
+.menu h1 {
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-size: 28px;
+  line-height: 41px;
+  padding-left: 17px;
+  margin: 0;
+}
+@media (min-width: 1024px) {
+  .menu h1 {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (min-width: 1024px) {
+  .menu {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.entrees {
+  animation: animation-menu 1.5s;
+}
+
+.plats {
+  animation: animation-menu 2.5s;
+}
+
+.desserts {
+  animation: animation-menu 3.5s;
 }
 
 .menus-entrees-plats-desserts {
@@ -494,32 +624,10 @@ footer .img-ohmyfood {
   padding: 42px 13px 0px 13px;
   gap: 40px;
 }
-
-.menu-title {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  gap: 50px;
-}
-
-.menu-title .card-logo {
-  display: flex;
-  justify-content: flex-end;
-  top: -10px;
-  position: relative;
-}
-
-.new p {
-  font-size: 14px;
-}
-
-.menu h1 {
-  font-family: "Shrikhand";
-  font-style: italic;
-  font-size: 28px;
-  line-height: 41px;
-  padding-left: 17px;
-  margin: 0;
+@media (min-width: 1024px) {
+  .menus-entrees-plats-desserts {
+    padding: 79px 210px 0px 210px;
+  }
 }
 
 .menus-part-title h2 {
@@ -536,18 +644,10 @@ footer .img-ohmyfood {
   flex-direction: column;
   gap: 12px;
 }
-
 .section-menu-cards .card {
   flex-direction: row;
   justify-content: space-between;
   overflow: hidden;
-}
-
-.card-content p, .card-content h3 {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 80%;
 }
 
 .card {
@@ -557,22 +657,21 @@ footer .img-ohmyfood {
   border-radius: 15px;
   height: 69px;
 }
-
 .card-content {
   gap: 5px;
   width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-
 .card-content h3 {
   margin: 12px 0px 5px 15px;
 }
-
 .card-content p {
   margin: 0px 0px 0px 15px;
   font-size: 15px;
   padding-right: 10px;
 }
-
 .card-text {
   display: flex;
   justify-content: space-between;
@@ -587,6 +686,42 @@ footer .img-ohmyfood {
   height: auto;
   position: relative;
 }
+.cards-restaurants img {
+  width: 100%;
+  object-fit: cover;
+  height: 180px;
+  border-radius: 15px 15px 0px 0px;
+}
+.cards-restaurants .card-title {
+  font-size: 18px;
+  line-height: 21px;
+  color: var(--main-b-color);
+  padding: 4px 15px;
+  margin: 0;
+}
+.cards-restaurants .card-subtitle {
+  font-size: 17px;
+  line-height: 20px;
+  padding: 0px 15px;
+  margin: 5px 0px 0px 0px;
+}
+.cards-restaurants .card-logo {
+  display: flex;
+  justify-content: flex-end;
+  top: -40px;
+  position: relative;
+  right: 25px;
+}
+
+.restaurants {
+  background: var(--main-bg-color);
+  padding: 54px 15px 66px 15px;
+}
+@media (min-width: 1024px) {
+  .restaurants {
+    padding: 80px 180px 30px 180px;
+  }
+}
 
 .grille-restaurants {
   margin: 0 10px;
@@ -595,126 +730,11 @@ footer .img-ohmyfood {
   align-items: center;
   gap: 15px;
 }
-
-.cards-restaurants img {
-  width: 100%;
-  object-fit: cover;
-  height: 180px;
-  border-radius: 15px 15px 0px 0px;
-}
-
-.cards-restaurants .card-title {
-  font-size: 18px;
-  line-height: 21px;
-  color: var(--main-b-color);
-  padding: 4px 15px;
-  margin: 0;
-}
-
-.cards-restaurants .card-subtitle {
-  font-size: 17px;
-  line-height: 20px;
-  padding: 0px 15px;
-  margin: 5px 0px 12px 0px;
-}
-
-.cards-restaurants .card-logo {
-  display: flex;
-  justify-content: flex-end;
-  top: -50px;
-  position: relative;
-  right: 25px;
-}
-
 @media (min-width: 1024px) {
-  .img-ohmyfood {
-    margin: 30px auto;
-  }
-  h1 {
-    font-size: 40px;
-    font-weight: 700px;
-  }
-  .button-fonctionnement h3 {
-    padding: 10px 0px;
-  }
-  .grid-fonctionnement {
-    display: grid;
-    padding: 50px 190px;
-  }
-  .flex {
-    display: flex;
-    gap: 30px;
-  }
-  .flex .fa-solid {
-    margin-left: 20px;
-  }
-  .button-fonctionnement {
-    justify-content: initial;
-  }
   .grille-restaurants {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 100px;
-  }
-  .block {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: baseline;
-  }
-  .block-2 {
-    display: flex;
-    align-items: baseline;
-  }
-  footer {
-    padding: 57px 30px 30px 0px;
-  }
-  .end-footer h2 {
-    padding-left: 16px;
-    margin: 16px;
-  }
-  .Fonction-1 {
-    width: 33%;
-  }
-  .Fonction-1::after {
-    top: 26px;
-  }
-  .Fonction-2 {
-    width: 33%;
-  }
-  .Fonction-2::after {
-    top: 26px;
-  }
-  .Fonction-3 {
-    width: 33%;
-  }
-  .Fonction-3::after {
-    top: 26px;
-  }
-  .end-footer p {
-    font-weight: 400;
-    font-size: 16px;
-    margin: 10px;
-  }
-  footer h3 {
-    margin: 10px;
-  }
-  .menu {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .menu-title {
-    justify-content: center;
-  }
-  .menu h1 {
-    display: flex;
-    justify-content: center;
-  }
-  .menus-entrees-plats-desserts {
-    padding: 79px 210px 0px 210px;
-  }
-  .fond-color2 {
-    padding: 80px 180px 30px 180px;
   }
 }
 
