--- a/sass/components/animation.scss
+++ b/sass/components/animation.scss
@@ -12,7 +12,6 @@
     animation: loader 0s 2s forwards;
     transform-origin: top;
 
-}
 .dot{
     width: 50px;
     height: 50px;
@@ -21,7 +20,7 @@
     margin: 0 15px;
    animation: loader infinite 0.3s alternate;
 }
-
+}
 .menu-prix{
     display: flex;
     justify-content: center;
@@ -30,12 +29,8 @@
     background: #99E2D0;
     border-radius: 0px 15px 15px 0px;
     margin-right: -4rem;
-    .card:hover .menu-prix {
-        animation: check-mark-button__appear 0.8s forwards ease-in-out;
-    }
-}
-
-.menu-prix i {
+    animation: reverse__check-mark-button__appear 0.8s;
+& i {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,29 +40,32 @@
     width: 20px;
     border-radius: 50%;
     color: #99E2D0;
-    .card:hover .menu-prix i {
-        animation: check-mark-button__appear 0.8s forwards ease-in-out;
-    }
+    opacity: 0;
+    animation: reverse__check-mark-button__appear 0.8s;
+  }
 }
-  
-
-
-
-.fa-solid.fa-heart:hover{
-    background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
-   transition: color 1s ease-in-out;
+.card:hover .menu-prix {
+    animation: check-mark-button__appear 0.8s forwards ease-in-out;
+& i {
+    animation: check-mark-button__appear 0.8s forwards ease-in-out;
 }
-
-.navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-&.p {
-    font-size: 30px;
-    padding: 14px 0px 5px 0px;
 }
-&.a {
+.card-logo{
+& .fa-solid:hover {
+    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    opacity: 1;
+    transition: opacity 0.4s ease-in-out 0.4s;
+  }
+  & .fa-solid{
+    color: transparent;
+    transition: color ;
+    opacity: 0;
+    z-index:3;
+  }
+  & .fa-regular{
     position: absolute;
-    left: 23px;
-}
+    z-index:2;
+  }
 }
