--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./components/animation.scss";
 @import "./components/button.scss";
-@import "./components/keyframe.scss";
+@import "./components/icons.scss";
+@import "./utils/keyframe.scss";
 @import "./Pages/index.scss";
 @import "./Pages/menu.scss";
