--- a/sass/Pages/menu.scss
+++ b/sass/Pages/menu.scss
@@ -9,6 +9,10 @@
     text-overflow: ellipsis;
     overflow:hidden ;
 }
+& a{
+    font-size: 15px;
+    padding-right: 10px;
+}
 &-title {
     display: flex;
     align-items: center;
@@ -123,21 +127,24 @@
 & img {
     width: 100%;
     object-fit: cover;
-    height: 180px;
+    height: 140px;
     border-radius: 15px 15px 0px 0px;
+    @media (min-width: 1024px){
+        height: 160px;
+    }
 }
 & .card-title {
     font-size: 18px;
     line-height: 21px;
     color: var(--main-b-color);
-    padding: 4px 15px;
+    padding: 16px 15px 5px 15px;
     margin: 0;
 }
 & .card-subtitle {
     font-size: 17px;
     line-height: 20px;
     padding: 0px 15px;
-    margin: 5px 0px 0px 0px;
+    margin: 0px;
 }
 & .card-logo {
     display: flex;
