--- a/sass/components/animation.scss
+++ b/sass/components/animation.scss
@@ -8,7 +8,7 @@
     align-items: center;
     transition: opacity 1s ease-in-out;
     inset: 0;
-    z-index: 1;
+    z-index: 10;
     animation: loader 0s 2s forwards;
     transform-origin: top;
 
@@ -51,12 +51,19 @@
 }
 }
 .card-logo{
-& .fa-solid:hover {
-    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    opacity: 1;
-    transition: opacity 0.4s ease-in-out 0.4s;
+  & .fa-solid:hover {
+      background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      opacity: 1;
+      transition: opacity 0.3s ease-in 0.3s;
+    }
+  & .fa-solid:not(:hover){
+  background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: opacity 0.3s ease-in 0.3s;
   }
   & .fa-solid{
     color: transparent;
